html setup complete

--- a/index.html
+++ b/index.html
@@ -20,6 +20,26 @@
                     <img src="./assets/cup.png" id="cup-one-img" />
                     <button id="cup-one-button">Cup One</button>
                 </div>
+                <div class="cup">
+                    <img src="./assets/cup.png" id="cup-two-img" />
+                    <button id="cup-two-button">Cup Two</button>
+                </div>
+                <div class="cup">
+                    <img src="./assets/cup.png" id="cup-three-img" />
+                    <button id="cup-three-button">Cup Three</button>
+                </div>
+            </div>
+
+            <div class="results">
+                <div>
+                    Wins: <span id="wins">0</span>
+                </div>
+                <div>
+                    Losses: <span id="losses">0</span>
+                </div>
+                <div>
+                    Games Played: <span id="total">0</span>
+                </div>
             </div>
 
         </section>
