clear and reset buttons are working

--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
                 <div>
                     Games Played: <span id="total">0</span>
                 </div>
+                <div>
+                    <button id="reset">Try Again</button>
+                    <button id="clear">Clear Results</button>
+                </div>
             </div>
 
         </section>
