difficulty buttons don't do anything yet

--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@
                     <button id="clear">Clear Results</button>
                 </div>
             </div>
+            
+            <div class="difficulty">
+                <button id="medium">One Ball</button>
+                <button id="easy">Two Balls</button>
+                <button id="hard">Random Balls</button>
+            </div>
 
         </section>
     </main>
