getRandomItem and handleGuess defined

--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
                 </div>
             </div>
             
-            <div class="difficulty">
+            <!-- <div class="difficulty">
                 <button id="medium">One Ball</button>
                 <button id="easy">Two Balls</button>
                 <button id="hard">Random Balls</button>
-            </div>
+            </div> -->
 
         </section>
     </main>
